# extra

./: AGENTS.md  CLAUDE.md  Makefile  README.md  docs.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.e2e.json  tsconfig.json  tsconfig.widget.json
.agents/: README.md
.ai/: README.md
.claude/: README.md
.codex/: README.md
docs/: ARCHITECTURE.md  CLAUDE_CODE_WORKFLOW.md  DEVELOPMENT_WORKFLOW.md  MCP_AND_TOOLS.md  PROMPT_RENDERING.md  README.md  ROADMAP.md  RUNTIME_HOOKS.md  RUNTIME_LIFECYCLE.md  SIDECAR_CONTEXT_AUTH.md  WIDGET.md  WIDGET_ARCHITECTURE.md  YAML_SPEC.md
examples/: agents.yml  config.schema.json  deepwiki_mcp_agents.yml  hooks_mcp_auth_agents.yml  local_mcp_agent.yml  local_mcp_agent_customers.yml  local_mcp_agent_docs_query.yml  local_mcp_agent_invoices.yml
examples/langgraph-basic-agent/: .env.example  README.md  pyproject.toml
examples/langgraph-basic-agent/src/langgraph_basic_agent/: __init__.py  graph.py  main.py  nodes.py  state.py  tools.py
examples/langgraph-basic-agent/tests/: test_graph.py
scripts/: sync_skills.py
skills/: README.md  architecture-review-skill.md  code-review-skill.md  documentation-skill.md  git-workflow-skill.md  mcp-tools-skill.md  project-architecture-skill.md  prompt-rendering-skill.md  refactoring-skill.md  runtime-engine-skill.md  senior-python-engineering-skill.md  sidecar-auth-context-skill.md  skill-authoring-skill.md  testing-skill.md  yaml-schema-skill.md
tasks/: 0001-repository-foundation.md  0002-yaml-schema-and-validation.md  0003-compiled-agent-graph.md  0004-runtime-engine.md  0005-prompt-rendering.md  0006-sidecar-auth-context.md  0007-mcp-tools-and-permissions.md  0008-cli.md  0009-api-server.md  0010-docker-deployment.md  0011-observability-and-tracing.md  0012-tests-and-quality-gates.md  README.md
tests/: test_logging.py  test_package_import.py  test_sync_skills.py
(+266 files in other folders)
