# Project + tooling configuration for the Declarative Agent Platform.
#
# Foundation phase note: the package under src/ is not implemented yet (task
# 0001 creates the skeleton). This file establishes the toolchain conventions
# (ruff, mypy, pytest) that the Makefile and skills refer to, so that future
# tasks have a consistent, agreed configuration to build against.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentplatform"
version = "0.0.0"
description = "A declarative platform for building AI agent systems (foundation phase)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentplatform"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
