[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-basic-agent"
version = "0.1.0"
description = "A deterministic LangGraph and LangChain reference example."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3,<2.0",
    "langgraph>=0.2,<2.0",
    "python-dotenv>=1.0,<2.0",
    "pytest>=8.0,<10.0",
]

[project.optional-dependencies]
openai = [
    "langchain-openai>=0.2,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_basic_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
